syntax = "proto3";

import "google/protobuf/timestamp.proto";

package vera.grpc;

service ArchiveService {
    // Starts the creation of an archive based on the given parameters
    rpc Archive (ArchiveRequest) returns (ArchiveReply);
}

message ArchiveRequest {
    string accountId = 1;

    // TODO(kevin): include store number..?

    // Start of the period to generate the archive for
    google.protobuf.Timestamp startDate = 2;

    // End of the period to generate the archive for
    google.protobuf.Timestamp endDate = 3;
}

message ArchiveReply {
    // Unique identifier of the audit to retrieve when it's ready
    string auditId = 1;
}
